// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render screen for first timer recovery tab in account settings 1`] = `
.c0 {
  box-sizing: border-box;
}

.c4 {
  box-sizing: border-box;
  padding: 8px;
  line-height: 0;
  background-color: rgba(255,255,255,0.07);
  border-radius: 8px;
}

.c6 {
  box-sizing: border-box;
  flex: 1;
}

.c9 {
  box-sizing: border-box;
  line-height: 0;
}

.c10 {
  box-sizing: border-box;
  flex: 0 0 auto;
}

.c11 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
}

.c11:hover,
.c11:focus {
  background: #B29DFF;
}

.c11:active {
  background: #C5B6FF;
}

.c11:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c7 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 18px;
  line-height: 32px;
  margin: 0px;
}

.c8 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 14px;
  line-height: 24px;
  margin: 0px;
  color: rgba(255,255,255,0.72);
}

.c5 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
}

.c3 {
  display: flex;
  align-items: center;
  gap: 16px;
}

.c1 {
  border: 1px solid rgba(255,255,255,0.18);
  border-radius: 4px;
}

.c2 {
  padding: 24px;
}

.c2:not(:last-child) {
  border-bottom: 1px solid rgba(255,255,255,0.18);
}

<div
  class="c0 c1"
>
  <div
    class="c0 c2"
  >
    <div
      class="c0 c3"
    >
      <div
        class="c4"
      >
        <span
          class="c5 icon icon-vault"
        >
          <svg
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              clip-rule="evenodd"
              d="M2.25 5.25C2.25 4.42157 2.92157 3.75 3.75 3.75H20.25C21.0784 3.75 21.75 4.42157 21.75 5.25V18C21.75 18.8284 21.0784 19.5 20.25 19.5H18.75V21C18.75 21.4142 18.4142 21.75 18 21.75C17.5858 21.75 17.25 21.4142 17.25 21V19.5H6.75V21C6.75 21.4142 6.41421 21.75 6 21.75C5.58579 21.75 5.25 21.4142 5.25 21V19.5H3.75C2.92157 19.5 2.25 18.8284 2.25 18V5.25ZM20.25 5.25V11.25H18.6878C18.3307 9.12172 16.4797 7.5 14.25 7.5C11.7647 7.5 9.75 9.51472 9.75 12C9.75 14.4853 11.7647 16.5 14.25 16.5C16.4797 16.5 18.3307 14.8783 18.6878 12.75H20.25V18H3.75V5.25H20.25ZM17.1555 11.25H15.3272C15.0901 10.91 14.696 10.6875 14.25 10.6875C13.5251 10.6875 12.9375 11.2751 12.9375 12C12.9375 12.7249 13.5251 13.3125 14.25 13.3125C14.696 13.3125 15.0901 13.09 15.3272 12.75H17.1555C16.8225 14.0439 15.6479 15 14.25 15C12.5931 15 11.25 13.6569 11.25 12C11.25 10.3431 12.5931 9 14.25 9C15.6479 9 16.8225 9.95608 17.1555 11.25Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </div>
      <div
        class="c6"
      >
        <div
          class="c7"
        >
          Generate Recovery Codes
        </div>
        <div
          class="c8"
          color="rgba(255, 255, 255, 0.72)"
        >
          Recovery codes are one-time use passcodes. You can use each code once if you lose your second factor authenticator or password. You haven’t generated any codes yet. Please generate them now and store them in a safe offline place.
        </div>
      </div>
      <div
        class="c9"
        style="visibility: hidden;"
      />
      <div
        class="c10"
      >
        <button
          class="c11"
          kind="primary"
        >
          Generate recovery codes
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`render screen for recovery tab for users without a valid email as username 1`] = `
.c0 {
  box-sizing: border-box;
}

.c4 {
  box-sizing: border-box;
  padding: 8px;
  line-height: 0;
  background-color: rgba(255,255,255,0.07);
  border-radius: 8px;
}

.c6 {
  box-sizing: border-box;
  flex: 1;
}

.c9 {
  box-sizing: border-box;
  line-height: 0;
}

.c10 {
  box-sizing: border-box;
  flex: 0 0 auto;
}

.c7 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 18px;
  line-height: 32px;
  margin: 0px;
}

.c8 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 14px;
  line-height: 24px;
  margin: 0px;
  color: rgba(255,255,255,0.72);
}

.c5 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
}

.c3 {
  display: flex;
  align-items: center;
  gap: 16px;
}

.c1 {
  border: 1px solid rgba(255,255,255,0.18);
  border-radius: 4px;
}

.c2 {
  padding: 24px;
}

.c2:not(:last-child) {
  border-bottom: 1px solid rgba(255,255,255,0.18);
}

<div
  class="c0 c1"
>
  <div
    class="c0 c2"
  >
    <div
      class="c0 c3"
    >
      <div
        class="c4"
      >
        <span
          class="c5 icon icon-vault"
        >
          <svg
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              clip-rule="evenodd"
              d="M2.25 5.25C2.25 4.42157 2.92157 3.75 3.75 3.75H20.25C21.0784 3.75 21.75 4.42157 21.75 5.25V18C21.75 18.8284 21.0784 19.5 20.25 19.5H18.75V21C18.75 21.4142 18.4142 21.75 18 21.75C17.5858 21.75 17.25 21.4142 17.25 21V19.5H6.75V21C6.75 21.4142 6.41421 21.75 6 21.75C5.58579 21.75 5.25 21.4142 5.25 21V19.5H3.75C2.92157 19.5 2.25 18.8284 2.25 18V5.25ZM20.25 5.25V11.25H18.6878C18.3307 9.12172 16.4797 7.5 14.25 7.5C11.7647 7.5 9.75 9.51472 9.75 12C9.75 14.4853 11.7647 16.5 14.25 16.5C16.4797 16.5 18.3307 14.8783 18.6878 12.75H20.25V18H3.75V5.25H20.25ZM17.1555 11.25H15.3272C15.0901 10.91 14.696 10.6875 14.25 10.6875C13.5251 10.6875 12.9375 11.2751 12.9375 12C12.9375 12.7249 13.5251 13.3125 14.25 13.3125C14.696 13.3125 15.0901 13.09 15.3272 12.75H17.1555C16.8225 14.0439 15.6479 15 14.25 15C12.5931 15 11.25 13.6569 11.25 12C11.25 10.3431 12.5931 9 14.25 9C15.6479 9 16.8225 9.95608 17.1555 11.25Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </div>
      <div
        class="c6"
      >
        <div
          class="c7"
        >
          Generate Recovery Codes
        </div>
        <div
          class="c8"
          color="rgba(255, 255, 255, 0.72)"
        >
          Account recovery is only available for local users with a valid email as their username.
        </div>
      </div>
      <div
        class="c9"
        style="visibility: hidden;"
      />
      <div
        class="c10"
      />
    </div>
  </div>
</div>
`;

exports[`render screen for recovery tab in account settings 1`] = `
.c0 {
  box-sizing: border-box;
}

.c4 {
  box-sizing: border-box;
  padding: 8px;
  line-height: 0;
  background-color: rgba(255,255,255,0.07);
  border-radius: 8px;
}

.c6 {
  box-sizing: border-box;
  flex: 1;
}

.c9 {
  box-sizing: border-box;
  line-height: 0;
}

.c10 {
  box-sizing: border-box;
  flex: 0 0 auto;
}

.c11 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
}

.c11:hover,
.c11:focus {
  background: #B29DFF;
}

.c11:active {
  background: #C5B6FF;
}

.c11:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c7 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 18px;
  line-height: 32px;
  margin: 0px;
}

.c8 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 14px;
  line-height: 24px;
  margin: 0px;
  color: rgba(255,255,255,0.72);
}

.c12 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 14px;
  line-height: 24px;
  font-size: 16px;
  margin: 0px;
}

.c13 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  margin: 0px;
}

.c5 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
}

.c3 {
  display: flex;
  align-items: center;
  gap: 16px;
}

.c1 {
  border: 1px solid rgba(255,255,255,0.18);
  border-radius: 4px;
}

.c2 {
  padding: 24px;
}

.c2:not(:last-child) {
  border-bottom: 1px solid rgba(255,255,255,0.18);
}

<div
  class="c0 c1"
>
  <div
    class="c0 c2"
  >
    <div
      class="c0 c3"
    >
      <div
        class="c4"
      >
        <span
          class="c5 icon icon-vault"
        >
          <svg
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              clip-rule="evenodd"
              d="M2.25 5.25C2.25 4.42157 2.92157 3.75 3.75 3.75H20.25C21.0784 3.75 21.75 4.42157 21.75 5.25V18C21.75 18.8284 21.0784 19.5 20.25 19.5H18.75V21C18.75 21.4142 18.4142 21.75 18 21.75C17.5858 21.75 17.25 21.4142 17.25 21V19.5H6.75V21C6.75 21.4142 6.41421 21.75 6 21.75C5.58579 21.75 5.25 21.4142 5.25 21V19.5H3.75C2.92157 19.5 2.25 18.8284 2.25 18V5.25ZM20.25 5.25V11.25H18.6878C18.3307 9.12172 16.4797 7.5 14.25 7.5C11.7647 7.5 9.75 9.51472 9.75 12C9.75 14.4853 11.7647 16.5 14.25 16.5C16.4797 16.5 18.3307 14.8783 18.6878 12.75H20.25V18H3.75V5.25H20.25ZM17.1555 11.25H15.3272C15.0901 10.91 14.696 10.6875 14.25 10.6875C13.5251 10.6875 12.9375 11.2751 12.9375 12C12.9375 12.7249 13.5251 13.3125 14.25 13.3125C14.696 13.3125 15.0901 13.09 15.3272 12.75H17.1555C16.8225 14.0439 15.6479 15 14.25 15C12.5931 15 11.25 13.6569 11.25 12C11.25 10.3431 12.5931 9 14.25 9C15.6479 9 16.8225 9.95608 17.1555 11.25Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </div>
      <div
        class="c6"
      >
        <div
          class="c7"
        >
          Generate New Recovery Codes
        </div>
        <div
          class="c8"
          color="rgba(255, 255, 255, 0.72)"
        >
          When you generate new recovery codes, your old ones will no longer work. Please make sure to save the new codes in a safe offline place. You can use each code once if you lose your second factor authenticator or password.
        </div>
      </div>
      <div
        class="c9"
        style="visibility: hidden;"
      />
      <div
        class="c10"
      >
        <button
          class="c11"
          kind="primary"
        >
          Generate new recovery codes
        </button>
      </div>
    </div>
  </div>
  <div
    class="c0 c2"
  >
    <div
      class="c12"
      font-size="3"
    >
      Recovery codes were last generated on:
       
      <span
        class="c13"
      >
        10/9/2020
      </span>
    </div>
  </div>
</div>
`;
